--- a/tests/ConfigurationFiles/Config_test.yml
+++ b/tests/ConfigurationFiles/Config_test.yml
@@ -2,6 +2,7 @@ Receiver:
   SerialPort: /dev/ttyS0
 Upload:
   Address: http://localhost:8080/
+  ApiKey: ABCD1234
 Devices:
   - ID: A3F6
     Subscription:
