--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Weather-Station-Receiver
 
 on:
   push:
@@ -40,8 +40,6 @@ jobs:
         args: >
           -Dsonar.organization=albertomn86
           -Dsonar.projectKey=albertomn86_Weather-Station-Receiver
-          -Dsonar.tests=tests/
-          -Dsonar.verbose=true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
