--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,14 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+      with:
+        fetch-depth: 0
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyyaml pyserial requests flake8 pytest coverage 
+        pip install pyyaml pyserial requests flake8 pytest coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -46,7 +48,7 @@ jobs:
           -Dsonar.projectKey=albertomn86_Weather-Station-Receiver
           -Dsonar.python.coverage.reportPaths=coverage.xml
           -Dsonar.sources=src/
-          -Dsonar.tests=tests/ 
+          -Dsonar.tests=tests/
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
